--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body{
     font-weight: 600;
     font-size: larger;
 }
-#Add_button{
+button{
     padding: 5px 20px;
     border-radius: 20px;
     border: 3px solid rgb(40, 233, 136)
